# gamespy-emulator

./: .gitignore  .gitmodules  README.md  config.json  configure.ps1  configure.sh  gamespy.sln  vcpkg-configuration.json  vcpkg.json
bf2-client-fixes/: bf2-client-fixes.vcxproj  exports.def  main.cpp
bf2-dlls/: client-url-traversal.cpp  make.ps1  server-instant-start.cpp  silenceTips.bat
emulator/: CMakeLists.txt  Makefile  admin.cpp  admin.h  asio.h  bf2.cpp  bf2.h  bf2web.cpp  bf2web.h  config.cpp  config.h  database.cpp  database.h  database.memory.cpp  database.memory.h  database.sqlite.cpp  database.sqlite.h  dns.cpp  dns.h  dns_details.cpp  dns_details.h  emulator.cpp  emulator.h  emulator.vcxproj  emulator.vcxproj.filters  game.cpp  game.h  gamedb.cpp  gamedb.h  gpcm.client.cpp  gpcm.client.h  gpcm.cpp  gpcm.h  gpsp.client.cpp  gpsp.client.h  gpsp.cpp  gpsp.h  gs_emulator.sqlite3  gs_query_parse.cpp  gs_query_parse.h  (+45 more)
emulator/http/: index.html
redirect/: build.ps1  configure.ps1  dlltarget.props  exports.def  main.cpp  make.ps1  redirect.vcxproj
redirector/: main.cpp  redirector.vcxproj
research/: bf2 client crashes.txt  bf2 key protocol.txt  bf2urlz-adv.txt  game_list.csv  game_list.tsv  gspids.txt  lanbroadcast.txt
resources/: build_withdll.bat  game_list.tsv  game_params.cfg  schema_sqlite.sql  silenceTips.bat  start_bf2.bat  start_bf2dedicated.bat
